source/input/parser/generated/Ili1Parser.cpp

// Generated from ..\..\source\input\parser\generated\Ili1Parser.g4 by ANTLR 4.7.1


#include "Ili1ParserVisitor.h"

#include "Ili1Parser.h"


using namespace antlrcpp;
using namespace parser;
using namespace antlr4;

Ili1Parser::Ili1Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

Ili1Parser::~Ili1Parser() {
  delete _interpreter;
}

std::string Ili1Parser::getGrammarFileName() const {
  return "Ili1Parser.g4";
}

const std::vector<std::string>& Ili1Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& Ili1Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Interlis1DefContext ------------------------------------------------------------------

Ili1Parser::Interlis1DefContext::Interlis1DefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili1Parser::Interlis1DefContext::TRANSFER() {
  return getToken(Ili1Parser::TRANSFER, 0);
}

tree::TerminalNode* Ili1Parser::Interlis1DefContext::SEMI() {
  return getToken(Ili1Parser::SEMI, 0);
}

Ili1Parser::ModelDefContext* Ili1Parser::Interlis1DefContext::modelDef() {
  return getRuleContext<Ili1Parser::ModelDefContext>(0);
}

Ili1Parser::FormatEncodingContext* Ili1Parser::Interlis1DefContext::formatEncoding() {
  return getRuleContext<Ili1Parser::FormatEncodingContext>(0);
}

tree::TerminalNode* Ili1Parser::Interlis1DefContext::EOF() {
  return getToken(Ili1Parser::EOF, 0);
}

tree::TerminalNode* Ili1Parser::Interlis1DefContext::NAME() {
  return getToken(Ili1Parser::NAME, 0);
}

Ili1Parser::DomainDefsContext* Ili1Parser::Interlis1DefContext::domainDefs() {
  return getRuleContext<Ili1Parser::DomainDefsContext>(0);
}

Ili1Parser::DerivativesContext* Ili1Parser::Interlis1DefContext::derivatives() {
  return getRuleContext<Ili1Parser::DerivativesContext>(0);
}

std::vector<Ili1Parser::ViewContext *> Ili1Parser::Interlis1DefContext::view() {
  return getRuleContexts<Ili1Parser::ViewContext>();
}

Ili1Parser::ViewContext* Ili1Parser::Interlis1DefContext::view(size_t i) {
  return getRuleContext<Ili1Parser::ViewContext>(i);
}


size_t Ili1Parser::Interlis1DefContext::getRuleIndex() const {
  return Ili1Parser::RuleInterlis1Def;
}

antlrcpp::Any Ili1Parser::Interlis1DefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili1ParserVisitor*>(visitor))
    return parserVisitor->visitInterlis1Def(this);
  else
    return visitor->visitChildren(this);
}

Ili1Parser::Interlis1DefContext* Ili1Parser::interlis1Def() {
  Interlis1DefContext *_localctx = _tracker.createInstance<Interlis1DefContext>(_ctx, getState());
  enterRule(_localctx, 0, Ili1Parser::RuleInterlis1Def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(Ili1Parser::TRANSFER);
    setState(77);
    dynamic_cast<Interlis1DefContext *>(_localctx)->transfername = match(Ili1Parser::NAME);
    setState(78);
    match(Ili1Parser::SEMI);
    setState(80);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == Ili1Parser::ILIDOMAIN) {
      setState(79);
      domainDefs();
    }
    setState(83);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == Ili1Parser::DERIVATIVES) {
      setState(82);
      derivatives();
    }
    setState(85);
    modelDef();
    setState(89);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Ili1Parser::VIEW) {
      setState(86);
      view();
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(92);
    formatEncoding();
    setState(93);
    match(Ili1Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModelDefContext ------------------------------------------------------------------

Ili1Parser::ModelDefContext::ModelDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili1Parser::ModelDefContext::MODEL() {
  return getToken(Ili1Parser::MODEL, 0);
}

tree::TerminalNode* Ili1Parser::ModelDefContext::END() {
  return getToken(Ili1Parser::END, 0);
}

tree::TerminalNode* Ili1Parser::ModelDefContext::DOT() {
  return getToken(Ili1Parser::DOT, 0);
}

std::vector<tree::TerminalNode *> Ili1Parser::ModelDefContext::NAME() {
  return getTokens(Ili1Parser::NAME);
}

tree::TerminalNode* Ili1Parser::ModelDefContext::NAME(size_t i) {
  return getToken(Ili1Parser::NAME, i);
}

Ili1Parser::DomainDefsContext* Ili1Parser::ModelDefContext::domainDefs() {
  return getRuleContext<Ili1Parser::DomainDefsContext>(0);
}

std::vector<Ili1Parser::TopicDefContext *> Ili1Parser::ModelDefContext::topicDef() {
  return getRuleContexts<Ili1Parser::TopicDefContext>();
}

Ili1Parser::TopicDefContext* Ili1Parser::ModelDefContext::topicDef(size_t i) {
  return getRuleContext<Ili1Parser::TopicDefContext>(i);
}


size_t Ili1Parser::ModelDefContext::getRuleIndex() const {
  return Ili1Parser::RuleModelDef;
}

antlrcpp::Any Ili1Parser::ModelDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili1ParserVisitor*>(visitor))
    return parserVisitor->visitModelDef(this);
  else
    return visitor->visitChildren(this);
}

Ili1Parser::ModelDefContext* Ili1Parser::modelDef() {
  ModelDefContext *_localctx = _tracker.createInstance<ModelDefContext>(_ctx, getState());
  enterRule(_localctx, 2, Ili1Parser::RuleModelDef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(Ili1Parser::MODEL);
    setState(96);
    dynamic_cast<ModelDefContext *>(_localctx)->modelname1 = match(Ili1Parser::NAME);
    setState(98);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == Ili1Parser::ILIDOMAIN) {
      setState(97);
      domainDefs();
    }
    setState(101); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(100);
      topicDef();
      setState(103); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == Ili1Parser::TOPIC);
    setState(105);
    match(Ili1Parser::END);
    setState(106);
    dynamic_cast<ModelDefContext *>(_localctx)->modelname2 = match(Ili1Parser::NAME);
    setState(107);
    match(Ili1Parser::DOT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DomainDefsContext ------------------------------------------------------------------

Ili1Parser::DomainDefsContext::DomainDefsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili1Parser::DomainDefsContext::ILIDOMAIN() {
  return getToken(Ili1Parser::ILIDOMAIN, 0);
}

std::vector<Ili1Parser::DomainDefContext *> Ili1Parser::DomainDefsContext::domainDef() {
  return getRuleContexts<Ili1Parser::DomainDefContext>();
}

Ili1Parser::DomainDefContext* Ili1Parser::DomainDefsContext::domainDef(size_t i) {
  return getRuleContext<Ili1Parser::DomainDefContext>(i);
}


size_t Ili1Parser::DomainDefsContext::getRuleIndex() const {
  return Ili1Parser::RuleDomainDefs;
}

antlrcpp::Any Ili1Parser::DomainDefsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili1ParserVisitor*>(visitor))
    return parserVisitor->visitDomainDefs(this);
  else
    return visitor->visitChildren(this);
}

Ili1Parser::DomainDefsContext* Ili1Parser::domainDefs() {
  DomainDefsContext *_localctx = _tracker.createInstance<DomainDefsContext>(_ctx, getState());
  enterRule(_localctx, 4, Ili1Parser::RuleDomainDefs);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(Ili1Parser::ILIDOMAIN);
    setState(111); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(110);
      domainDef();
      setState(113); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == Ili1Parser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DomainDefContext ------------------------------------------------------------------

Ili1Parser::DomainDefContext::DomainDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili1Parser::DomainDefContext::EQUAL() {
  return getToken(Ili1Parser::EQUAL, 0);
}

Ili1Parser::AttributeTypeContext* Ili1Parser::DomainDefContext::attributeType() {
  return getRuleContext<Ili1Parser::AttributeTypeContext>(0);
}

tree::TerminalNode* Ili1Parser::DomainDefContext::SEMI() {
  return getToken(Ili1Parser::SEMI, 0);
}

tree::TerminalNode* Ili1Parser::DomainDefContext::NAME() {
  return getToken(Ili1Parser::NAME, 0);
}


size_t Ili1Parser::DomainDefContext::getRuleIndex() const {
  return Ili1Parser::RuleDomainDef;
}

antlrcpp::Any Ili1Parser::DomainDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili1ParserVisitor*>(visitor))
    return parserVisitor->visitDomainDef(this);
  else
    return visitor->visitChildren(this);
}

Ili1Parser::DomainDefContext* Ili1Parser::domainDef() {
  DomainDefContext *_localctx = _tracker.createInstance<DomainDefContext>(_ctx, getState());
  enterRule(_localctx, 6, Ili1Parser::RuleDomainDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    dynamic_cast<DomainDefContext *>(_localctx)->domainname = match(Ili1Parser::NAME);
    setState(116);
    match(Ili1Parser::EQUAL);
    setState(117);
    attributeType();
    setState(118);
    match(Ili1Parser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopicDefContext ------------------------------------------------------------------

Ili1Parser::TopicDefContext::TopicDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili1Parser::TopicDefContext::TOPIC() {
  return getToken(Ili1Parser::TOPIC, 0);
}

tree::TerminalNode* Ili1Parser::TopicDefContext::EQUAL() {
  return getToken(Ili1Parser::EQUAL, 0);
}

tree::TerminalNode* Ili1Parser::TopicDefContext::END() {
  return getToken(Ili1Parser::END, 0);
}

tree::TerminalNode* Ili1Parser::TopicDefContext::DOT() {
  return getToken(Ili1Parser::DOT, 0);
}

std::vector<tree::TerminalNode *> Ili1Parser::TopicDefContext::NAME() {
  return getTokens(Ili1Parser::NAME);
}

tree::TerminalNode* Ili1Parser::TopicDefContext::NAME(size_t i) {
  return getToken(Ili1Parser::NAME, i);
}

std::vector<Ili1Parser::TableDefContext *> Ili1Parser::TopicDefContext::tableDef() {
  return getRuleContexts<Ili1Parser::TableDefContext>();
}

Ili1Parser::TableDefContext* Ili1Parser::TopicDefContext::tableDef(size_t i) {
  return getRuleContext<Ili1Parser::TableDefContext>(i);
}

std::vector<Ili1Parser::DomainDefsContext *> Ili1Parser::TopicDefContext::domainDefs() {
  return getRuleContexts<Ili1Parser::DomainDefsContext>();
}

Ili1Parser::DomainDefsContext* Ili1Parser::TopicDefContext::domainDefs(size_t i) {
  return getRuleContext<Ili1Parser::DomainDefsContext>(i);
}


size_t Ili1Parser::TopicDefContext::getRuleIndex() const {
  return Ili1Parser::RuleTopicDef;
}

antlrcpp::Any Ili1Parser::TopicDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili1ParserVisitor*>(visitor))
    return parserVisitor->visitTopicDef(this);
  else
    return visitor->visitChildren(this);
}

Ili1Parser::TopicDefContext* Ili1Parser::topicDef() {
  TopicDefContext *_localctx = _tracker.createInstance<TopicDefContext>(_ctx, getState());
  enterRule(_localctx, 8, Ili1Parser::RuleTopicDef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    match(Ili1Parser::TOPIC);
    setState(121);
    dynamic_cast<TopicDefContext *>(_localctx)->topicname1 = match(Ili1Parser::NAME);
    setState(122);
    match(Ili1Parser::EQUAL);
    setState(125); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(125);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case Ili1Parser::OPTIONAL:
        case Ili1Parser::TABLE: {
          setState(123);
          tableDef();
          break;
        }

        case Ili1Parser::ILIDOMAIN: {
          setState(124);
          domainDefs();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(127); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == Ili1Parser::ILIDOMAIN || _la == Ili1Parser::OPTIONAL

    || _la == Ili1Parser::TABLE);
    setState(129);
    match(Ili1Parser::END);
    setState(130);
    dynamic_cast<TopicDefContext *>(_localctx)->topicname2 = match(Ili1Parser::NAME);
    setState(131);
    match(Ili1Parser::DOT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TableDefContext ------------------------------------------------------------------

Ili1Parser::TableDefContext::TableDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili1Parser::TableDefContext::TABLE() {
  return getToken(Ili1Parser::TABLE, 0);
}

tree::TerminalNode* Ili1Parser::TableDefContext::EQUAL() {
  return getToken(Ili1Parser::EQUAL, 0);
}

Ili1Parser::IdentificationsContext* Ili1Parser::TableDefContext::identifications() {
  return getRuleContext<Ili1Parser::IdentificationsContext>(0);
}

tree::TerminalNode* Ili1Parser::TableDefContext::END() {
  return getToken(Ili1Parser::END, 0);
}

tree::TerminalNode* Ili1Parser::TableDefContext::SEMI() {
  return getToken(Ili1Parser::SEMI, 0);
}

std::vector<tree::TerminalNode *> Ili1Parser::TableDefContext::NAME() {
  return getTokens(Ili1Parser::NAME);
}

tree::TerminalNode* Ili1Parser::TableDefContext::NAME(size_t i) {
  return getToken(Ili1Parser::NAME, i);
}

tree::TerminalNode* Ili1Parser::TableDefContext::OPTIONAL() {
  return getToken(Ili1Parser::OPTIONAL, 0);
}

std::vector<Ili1Parser::AttributeContext *> Ili1Parser::TableDefContext::attribute() {
  return getRuleContexts<Ili1Parser::AttributeContext>();
}

Ili1Parser::AttributeContext* Ili1Parser::TableDefContext::attribute(size_t i) {
  return getRuleContext<Ili1Parser::AttributeContext>(i);
}


size_t Ili1Parser::TableDefContext::getRuleIndex() const {
  return Ili1Parser::RuleTableDef;
}

antlrcpp::Any Ili1Parser::TableDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili1ParserVisitor*>(visitor))
    return parserVisitor->visitTableDef(this);
  else
    return visitor->visitChildren(this);
}

Ili1Parser::TableDefContext* Ili1Parser::tableDef() {
  TableDefContext *_localctx = _tracker.createInstance<TableDefContext>(_ctx, getState());
  enterRule(_localctx, 10, Ili1Parser::RuleTableDef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == Ili1Parser::OPTIONAL) {
      setState(133);
      match(Ili1Parser::OPTIONAL);
    }
    setState(136);
    match(Ili1Parser::TABLE);
    setState(137);
    dynamic_cast<TableDefContext *>(_localctx)->tablename1 = match(Ili1Parser::NAME);
    setState(138);
    match(Ili1Parser::EQUAL);
    setState(140); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(139);
      attribute();
      setState(142); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == Ili1Parser::NAME);
    setState(144);
    identifications();
    setState(145);
    match(Ili1Parser::END);
    setState(146);
    dynamic_cast<TableDefContext *>(_localctx)->tablename2 = match(Ili1Parser::NAME);
    setState(147);
    match(Ili1Parser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeContext ------------------------------------------------------------------

Ili1Parser::AttributeContext::AttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili1Parser::AttributeContext::COLON() {
  return getToken(Ili1Parser::COLON, 0);
}

tree::TerminalNode* Ili1Parser::AttributeContext::SEMI() {
  return getToken(Ili1Parser::SEMI, 0);
}

std::vector<tree::TerminalNode *> Ili1Parser::AttributeContext::NAME() {
  return getTokens(Ili1Parser::NAME);
}

tree::TerminalNode* Ili1Parser::AttributeContext::NAME(size_t i) {
  return getToken(Ili1Parser::NAME, i);
}

Ili1Parser::TypeContext* Ili1Parser::AttributeContext::type() {
  return getRuleContext<Ili1Parser::TypeContext>(0);
}

tree::TerminalNode* Ili1Parser::AttributeContext::RARROW() {
  return getToken(Ili1Parser::RARROW, 0);
}

tree::TerminalNode* Ili1Parser::AttributeContext::OPTIONAL() {
  return getToken(Ili1Parser::OPTIONAL, 0);
}

tree::TerminalNode* Ili1Parser::AttributeContext::EXPLANATION() {
  return getToken(Ili1Parser::EXPLANATION, 0);
}


size_t Ili1Parser::AttributeContext::getRuleIndex() const {
  return Ili1Parser::RuleAttribute;
}

antlrcpp::Any Ili1Parser::AttributeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili1ParserVisitor*>(visitor))
    return parserVisitor->visitAttribute(this);
  else
    return visitor->visitChildren(this);
}

Ili1Parser::AttributeContext* Ili1Parser::attribute() {
  AttributeContext *_localctx = _tracker.createInstance<AttributeContext>(_ctx, getState());
  enterRule(_localctx, 12, Ili1Parser::RuleAttribute);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    dynamic_cast<AttributeContext *>(_localctx)->attributename = match(Ili1Parser::NAME);
    setState(150);
    match(Ili1Parser::COLON);
    setState(152);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == Ili1Parser::OPTIONAL) {
      setState(151);
      match(Ili1Parser::OPTIONAL);
    }
    setState(157);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Ili1Parser::DATE:
      case Ili1Parser::TEXT:
      case Ili1Parser::LPAREN:
      case Ili1Parser::LBRACE:
      case Ili1Parser::HALIGNMENT:
      case Ili1Parser::VALIGNMENT:
      case Ili1Parser::POLYLINE:
      case Ili1Parser::SURFACE:
      case Ili1Parser::AREA:
      case Ili1Parser::COORD2:
      case Ili1Parser::COORD3:
      case Ili1Parser::DIM1:
      case Ili1Parser::DIM2:
      case Ili1Parser::RADIANS:
      case Ili1Parser::DEGREES:
      case Ili1Parser::GRADS:
      case Ili1Parser::NAME: {
        setState(154);
        type();
        break;
      }

      case Ili1Parser::RARROW: {
        setState(155);
        match(Ili1Parser::RARROW);
        setState(156);
        dynamic_cast<AttributeContext *>(_localctx)->tablename = match(Ili1Parser::NAME);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(160);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == Ili1Parser::EXPLANATION) {
      setState(159);
      dynamic_cast<AttributeContext *>(_localctx)->explanation = match(Ili1Parser::EXPLANATION);
    }
    setState(162);
    match(Ili1Parser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentificationsContext ------------------------------------------------------------------

Ili1Parser::IdentificationsContext::IdentificationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili1Parser::IdentificationsContext::NO() {
  return getToken(Ili1Parser::NO, 0);
}

tree::TerminalNode* Ili1Parser::IdentificationsContext::IDENT() {
  return getToken(Ili1Parser::IDENT, 0);
}

std::vector<Ili1Parser::IdentificationContext *> Ili1Parser::IdentificationsContext::identification() {
  return getRuleContexts<Ili1Parser::IdentificationContext>();
}

Ili1Parser::IdentificationContext* Ili1Parser::IdentificationsContext::identification(size_t i) {
  return getRuleContext<Ili1Parser::IdentificationContext>(i);
}


size_t Ili1Parser::IdentificationsContext::getRuleIndex() const {
  return Ili1Parser::RuleIdentifications;
}

antlrcpp::Any Ili1Parser::IdentificationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili1ParserVisitor*>(visitor))
    return parserVisitor->visitIdentifications(this);
  else
    return visitor->visitChildren(this);
}

Ili1Parser::IdentificationsContext* Ili1Parser::identifications() {
  IdentificationsContext *_localctx = _tracker.createInstance<IdentificationsContext>(_ctx, getState());
  enterRule(_localctx, 14, Ili1Parser::RuleIdentifications);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(172);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Ili1Parser::NO: {
        enterOuterAlt(_localctx, 1);
        setState(164);
        match(Ili1Parser::NO);
        setState(165);
        match(Ili1Parser::IDENT);
        break;
      }

      case Ili1Parser::IDENT: {
        enterOuterAlt(_localctx, 2);
        setState(166);
        match(Ili1Parser::IDENT);
        setState(168); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(167);
          identification();
          setState(170); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == Ili1Parser::NAME);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentificationContext ------------------------------------------------------------------

Ili1Parser::IdentificationContext::IdentificationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> Ili1Parser::IdentificationContext::NAME() {
  return getTokens(Ili1Parser::NAME);
}

tree::TerminalNode* Ili1Parser::IdentificationContext::NAME(size_t i) {
  return getToken(Ili1Parser::NAME, i);
}

tree::TerminalNode* Ili1Parser::IdentificationContext::SEMI() {
  return getToken(Ili1Parser::SEMI, 0);
}

std::vector<tree::TerminalNode *> Ili1Parser::IdentificationContext::COMMA() {
  return getTokens(Ili1Parser::COMMA);
}

tree::TerminalNode* Ili1Parser::IdentificationContext::COMMA(size_t i) {
  return getToken(Ili1Parser::COMMA, i);
}


size_t Ili1Parser::IdentificationContext::getRuleIndex() const {
  return Ili1Parser::RuleIdentification;
}

antlrcpp::Any Ili1Parser::IdentificationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili1ParserVisitor*>(visitor))
    return parserVisitor->visitIdentification(this);
  else
    return visitor->visitChildren(this);
}

Ili1Parser::IdentificationContext* Ili1Parser::identification() {
  IdentificationContext *_localctx = _tracker.createInstance<IdentificationContext>(_ctx, getState());
  enterRule(_localctx, 16, Ili1Parser::RuleIdentification);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(174);
    match(Ili1Parser::NAME);
    setState(179);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Ili1Parser::COMMA) {
      setState(175);
      match(Ili1Parser::COMMA);
      setState(176);
      match(Ili1Parser::NAME);
      setState(181);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(182);
    match(Ili1Parser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

Ili1Parser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ili1Parser::AttributeTypeContext* Ili1Parser::TypeContext::attributeType() {
  return getRuleContext<Ili1Parser::AttributeTypeContext>(0);
}

tree::TerminalNode* Ili1Parser::TypeContext::NAME() {
  return getToken(Ili1Parser::NAME, 0);
}


size_t Ili1Parser::TypeContext::getRuleIndex() const {
  return Ili1Parser::RuleType;
}

antlrcpp::Any Ili1Parser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili1ParserVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

Ili1Parser::TypeContext* Ili1Parser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 18, Ili1Parser::RuleType);
